--- a/miniprogram/pages/account_overview/views/month-detail/month-detail.wxss
+++ b/miniprogram/pages/account_overview/views/month-detail/month-detail.wxss
@@ -1,6 +1,8 @@
 /* pages/account/components/overview/components/category-detail/category-detail.wxss */
 .body{
-  margin-bottom: 80rpx;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .bottom{
