--- a/miniprogram/pages/account_overview/views/category-total/category-total.wxss
+++ b/miniprogram/pages/account_overview/views/category-total/category-total.wxss
@@ -1,6 +1,8 @@
 /* pages/account/components/overview/category-table/category-table.wxss */
 .body{
-  margin-bottom: 80rpx;
+  width: 100%;
+  height: 100%;
+  overflow-y: scroll;
 }
 .picker{
   width: 100%;
@@ -22,18 +24,7 @@
   font-weight: 500;
 }
 
-.hiden .cat{
-  transition: all .5s;
 
-  transform: translateX(-500rpx);
-  opacity: 0;
-}
-
-
-.body .cat{
-  transition: all .5s;
-
-}
 .body .cat .process-wraper{
   border-bottom: 15rpx solid #f5f5f5;
 }
