--- a/miniprogram/pages/account_overview/account_overview.wxml
+++ b/miniprogram/pages/account_overview/account_overview.wxml
@@ -8,9 +8,9 @@
 
     <view class="swiper">
         
-        <!-- <category-total wx:if="{{tabbar === 'category'}}" />
-        <day-total wx:if="{{tabbar === 'month'}}" /> -->
-        <month-detail />
+        <category-total wx:if="{{tabbar === 'category'}}" />
+        <day-total wx:if="{{tabbar === 'month'}}" />
+        <month-detail wx:if="{{tabbar === 'detail'}}" />
         
 
 
