--- a/miniprogram/pages/schedule/schedule.wxml
+++ b/miniprogram/pages/schedule/schedule.wxml
@@ -1,34 +1,25 @@
-<scroll-view class="day client" scroll-y="true" 
-bindscrolltolower="reachBottom" lower-threshold="{{50}}" upper-threshold="{{0}}" bindtouchstart="startRefresh"
+<scroll-view class="day client" refresher-enabled scroll-y="true" bindscrolltolower="reachBottom" bindrefresherrefresh="pullRefresh" refresher-triggered="{{triggered}}">
+
+  <!-- bindtouchstart="startRefresh"
 bindtouchend="endRefresh"
-bindtouchmove="onRefresh"
-bindscroll="scroll"
-
->
+bindtouchmove="onRefresh" -->
   <!-- bindscrolltoupper="pullRefresh" -->
-
-  <refresher  isTriggered="{{isTriggered}}" />
-
-  <!-- <view class="day-num">18号</view>
-  <view class="item">
-    <text class="time">21:21</text>
-    <text class="place">地点</text>
-    <text class="detail">备注信息</text>
-  </view> -->
-  <!-- <image src=""> </image>
-  <editor show-img-size show-img-toolbar show-img-resize	/> -->
-  <!-- <button bindtap="getMess">订阅消息</button> -->
-
-  <!-- <sche-item wx:for="{{scheduleList}}" wx:key="{{index}}" detail="{{item.detail}}" /> -->
 
 
   <sche-day wx:for="{{dayList}}" wx:key="{{index}}" records="{{item.records}}" month="{{item.month}}" day="{{item.day}}" />
 
 
-  <view class="add-btn">
-    <button bindtap="showEditor">记</button>
+
+  <view wx:if="{{list.length === 0}}" style="width:100%;height:100%;padding-bottom: 20vw;">
+  
+
   </view>
   <loading-bot hasData="{{hasData}}" show="{{reachBot}}" />
+
 </scroll-view>
+
+<view class="add-btn">
+  <button bindtap="showEditor">记</button>
+</view>
 
 <sche-editor class="editor-com" showEditor="{{editActive}}" bind:emit="closeEditor" bind:edit="editComplete" />
